Add interview answers for Adobe, Walmart, Meesho, American Express
- Adobe: Max product subarray, pluggable cache, MySQL to Cassandra migration
- Walmart: Kadane's algo, digital wallet, GC algorithms, Java 8 vs 17
- Meesho: Median of sorted arrays, Splitwise LLD, Google Meet design
- American Express: Combination sum, React carousel, UPI payment flow